# rcat

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  bun.lockb  eslint.config.js  implementation_plan.md  index.html  package-lock.json  package.json  tailwind.config.js  tempreview.md  todo.md  todo2.md  todo_claude.md  tofix.md  vitest.config.ts
docs/: 11.md  ARCHITECTURE.md  LOBE_VIDOL.md  MATE_ENGINE.md  MATE_ENGINE_INTERACTIONS.md  OPTIMIZATION.md  P0_CodeReview.md  P0_Progress_2026-01-14.md  P1_OffscreenCanvas_Worker.md  TYPEGEN.md  VOICE_MANUAL.md  VRM.md  VRM_EXPRESSIONS.md  VRM_V1.md  VRM_V2.md  implementation_plan.md  review.md  settings.md  task.md
public/vrm/: README.txt  idle.motion.json
public/vrm/motions/: README.txt  index.json
src/: App.css  App.tsx  AvatarApp.tsx  ContextPanelApp.tsx  constants.ts  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs  window_state.rs
src-tauri/src/commands/: avatar_commands.rs  mod.rs  panel_commands.rs  vrm_commands.rs  vrm_types.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/history/: error.rs  mod.rs  store.rs  title.rs  types.rs
src-tauri/src/plugins/vision/: ai_tools.rs  capture.rs  mod.rs  ocr.rs  types.rs  vlm.rs
src-tauri/src/services/: ai.rs  anchor_layout.rs  config.rs  cursor.rs  history.rs  mod.rs  paths.rs  prompts.rs  retry.rs  vision.rs  voice.rs  voice_conversation.rs  window_manager.rs
src-tauri/src/services/ai/: commands.rs  manager.rs  mod.rs  request_options.rs  retry_policy.rs  stream.rs  tools.rs  types.rs
src-tauri/src/windows/: avatar_window.rs  hittest_mask.rs  mod.rs  panel_window.rs
src-tauri/src/windows/avatar_window/: service.rs  subclass.rs
src/bindings/: tauri-types.ts
src/components/: Capsule.tsx  ChatInput.tsx  ChatMessages.test.tsx  ChatMessages.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  MessageList.tsx  PromptInput.tsx  ResizeHandle.tsx  index.ts
src/components/ai-elements/: context.tsx  message.tsx  reasoning.tsx  thinking-indicator.tsx
src/components/chat/: AssistantMessage.tsx  UserMessage.tsx  messageText.ts
src/components/icons/: ProviderLogo.tsx
src/components/prompt/: HistoryDropdown.tsx  ModelSelector.tsx
src/components/settings/: ModelEditorDialog.tsx
src/components/skins/: SkinManager.tsx
src/components/ui/: collapsible.tsx  dropdown-menu.tsx  select.tsx
src/components/views/: InputView.tsx  MiniView.tsx  ResultView.tsx  SettingsView.tsx  index.ts
src/components/vrm/: AvatarMouseTracking.ts  ExpressionDriver.ts  ExpressionMixer.ts  IdleMotionController.ts  VrmCanvas.tsx  VrmDebugPanel.tsx  VrmSidePanel.tsx  VrmStage.tsx  armNormalization.ts  avatarBehaviorEventRuntime.ts  avatarBubbleStore.ts  avatarDragSway.ts  avatarGazeController.ts  avatarHitTestMaskRuntime.ts  avatarHoverReactions.ts  avatarInteractionController.ts  avatarInteractionEngine.ts  avatarInteractionInputRuntime.ts  avatarInteractionRuleEngine.ts  avatarInteractionStore.ts  avatarInteractionZones.ts  avatarSfxBus.ts  avatarWindowTransform.ts  blinkController.ts  emotionApi.ts  emotionMotionCoordinator.ts  emotionProfileStore.ts  emotionRecipes.ts  emotionStore.ts  emotionTypes.ts  expressionBindingsStore.ts  expressionOverrideStore.ts  hudLayoutStore.ts  hudLayoutTypes.ts  idleMotion.ts  mouseTrackingStore.ts  mouseTrackingTypes.ts  renderFpsStore.ts  speechGestures.ts  trackingPermissions.ts  (+17 more)
src/components/vrm/motion/: MotionController.ts  desktopRootMotion.ts  footPlantIk.ts  motionCatalog.ts  motionDebug.ts
src/components/vrm/motion/mixamo/: loadMixamoAnimation.ts  mixamoVrmRigMap.ts
src/components/vrm/motion/vmd/: loadVmdAnimation.ts  threeHelpers.ts  vmd2vrmanim.binding.ts  vmd2vrmanim.ts  vrmIkHandler.ts
src/components/vrm/motion/vrma/: VRMAnimation.ts  VRMAnimationLoaderPlugin.ts  VRMCVRMAnimation.ts  loadVrmAnimation.ts
src/components/vrm/motion/vrma/utils/: arrayChunk.ts
src/constants/: events.ts  index.ts  models.ts  window.ts
src/contexts/: ChatContext.tsx  ChatUiContext.tsx
src/dev/: visionTest.ts
src/hooks/: index.ts  useAiConfig.ts  useAiPublicConfig.ts  useAutoWindowFit.ts  useAutosizeTextarea.ts  useChatSession.ts  useChatTransport.ts  useConversationActions.ts  useConversationHistory.test.tsx  useConversationHistory.ts  useGeneratingTracker.ts  useModelSelection.ts  useRouteController.ts  useSkinPreference.ts  useSpeechRecognition.ts  useSyncWindowModeWithConversation.ts  useTauriEvents.ts  useToggleExpand.ts  useWindowManager.ts
src/services/: ai.ts  aiConfig.ts  history.ts  index.ts  tauriChatTransport.ts  vision.ts  voice.ts  vrmSettings.ts  window.ts  windowManager.ts
src/styles/: base.css  capsule.css  chat-input.css  index.css  markdown.css  message-list.css
src/types/: index.ts  mmd-parser.d.ts
src/utils/: aiMessages.ts  contextUsage.ts  index.ts  measureText.test.ts  measureText.ts  reportError.ts  tauri.ts
src/windows/: WindowRouter.tsx  vrmBridgeTypes.ts
src/windows/avatar/: AvatarRoot.tsx  HitTestDebugOverlay.tsx  MaskGenerator.ts  footPlantDebugSettings.ts  hittestDebugSettings.ts  maskReadbackPbo.ts  useAvatarVrmBridge.ts  useHitTestMask.ts
src/windows/panel/: PanelRoot.tsx
src/windows/panel/tabs/: DebugTab.tsx  VrmTab.tsx
