[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-openai = { version = "0.32.2", features = ["byot", "chat-completion"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
# libSQL (Turso) async client: supports remote (HTTP/WS) and local file fallback.
libsql = { version = "0.9.29", default-features = false, features = ["core", "remote", "tls"] }
uuid = { version = "1", features = ["v4"] }

# Optional: Rust -> TypeScript type generation (dev tooling)
specta = { version = "2.0.0-rc.22", features = ["derive"], optional = true }
specta-typescript = { version = "0.0.9", optional = true }

# Vision module dependencies
xcap = "0.8.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

# Windows OCR (Windows-only)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
] }

[features]
# Enables dev-only Rust -> TS type export binary.
typegen = ["dep:specta", "dep:specta-typescript"]
